waiting for multidimensional matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ node_js:
   - "0.12"
 
 env:
-  matrix:
-    - SERVICE_A_VERSION=v1
-    - SERVICE_A_VERSION=v2
-    - SERVICE_B_VERSION=v1
-    - SERVICE_B_VERSION=v2
-    - SERVICE_B_VERSION=v3
+  - SERVICE_A_VERSION=v1 SERVICE_B_VERSION=v1
+  - SERVICE_A_VERSION=v1 SERVICE_B_VERSION=v2
+  - SERVICE_A_VERSION=v1 SERVICE_B_VERSION=v3  
+  - SERVICE_A_VERSION=v2 SERVICE_B_VERSION=v1
+  - SERVICE_A_VERSION=v2 SERVICE_B_VERSION=v2
+  - SERVICE_A_VERSION=v2 SERVICE_B_VERSION=v3  
 
 install:
  - sudo apt-get update
